<resources>
    <string name="app_name">Stocktick</string>
    <string name="title_loan">Loan</string>
    <string name="loan_title">LOAN is a Necessity</string>
    <string name="loan_list_title">Top Insurance policies</string>
    <string name="loan_form_title">Fill the form</string>
    <string name="title_insurance">Insurance</string>
    <string name="insurance_title">Insurance is a Necessity</string>
    <string name="loan_body">An insurance plan that provides financial protection to your family and offers you the flexibility to choose the plan that suits your need.</string>
    <string name="loan_bottom_title">Why you should choose us?</string>
    <string name="loan_para1">Personal loans are an unsecured form of credit that is popular to meet immediate requirements. It is multi-purpose in nature and therefore can be used for various purposes including wedding, home renovation, travel purposes and more. Moreover, there is no restriction for the amount borrowed and can be used for any purpose they want. In fact, a personal loan can help you build your credit faster when compared with other forms of credit. This is because of the risk it carries due to being unsecured.</string>
    <string name="media_title">Media is a Necessity</string>
    <string name="title_media">Media</string>
    <string name="title_education">Education</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Interest">INTEREST RATE</string>
    <string name="login_signup">LOGIN/SIGNUP</string>
    <string name="hello_welcome">Hello, welcome back to your account</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="request_otp">Request OTP</string>
    <string name="Category">CATEGORY</string>
    <string name="get_quote">GET QUOTE</string>
    <string name="logout">Logout</string>
    <string name="Motor">Motor</string>
    <string name="Life">Life</string>
    <string name="Health">Health</string>
    <string name="Name">NAME</string>
    <string name="Personal">Personal</string>
    <string name="Select_category">SELECT A CATEGORY</string>
    <string name="phone_heading">PHONE NUMBER</string>
    <string name="business_hint">Enter organization name</string>
    <string name="business_heading">ORGANIZATION NAME</string>
    <string name="email_hint">Enter your email</string>
    <string name="email_heading">EMAIL</string>
    <string name="policy_exp_heading">Policy Exp Date</string>
    <string name="policy_exp_hint">Please enter the policy Expiry Date</string>
    <string name="login_enter_phone_number">Enter phone number</string>
    <string name="enter_name">Enter your name</string>
    <string name="create_account_hint_enter_email_address">Enter email address</string>
    <string name="policy_type_heading">Policy Type</string>
    <string name="policy_type_hint">Please enter the policy type</string>
    <string name="ownership_transfer_heading">Has ownership of the car been transferred in last 12 months</string>
    <string name="puc_exp_heading">PUC Valid Exp date</string>
    <string name="puc_exp_hint">Please enter PUC Valid Expiry date</string>
    <string name="puc_heading">PUC</string>
    <string name="insurer_heading">Select a Current Insurer</string>
    <string name="insurer_hint">Please enter your current insurer</string>
    <string name="variant_heading">Variant Name</string>
    <string name="variant_hint">Please enter variant name</string>
    <string name="fuel_type_heading">Select a Fuel Type</string>
    <string name="model_heading">Select a Model</string>
    <string name="model_hint">Please select a model</string>
    <string name="manufacturer_heading">Select Manufacturer</string>
    <string name="vehicle_heading">Vehicle No</string>
    <string name="vehicle_hint">Please enter vehicle number</string>
    <string name="address_heading">ADDRESS</string>
    <string name="address_hint">Please enter your address</string>
    <string name="dob_heading">Date Of Birth</string>
    <string name="dob_hint">Please enter your date of birth</string>
    <string name="select_family_heading">Select Family Member</string>
    <string name="age_heading">AGE</string>
    <string name="age_hint">Please enter your age</string>
    <string name="amount_heading">AMOUNT</string>
    <string name="amount_hint">Please enter the amount</string>
    <string name="coverLife_heading">Cover Life</string>
    <string name="coverLife_hint">Please enter your cover life</string>
    <string name="coverUpto_heading">Cover Upto</string>
    <string name="coverUpto_hint">Please enter your cover amount</string>
    <string name="manufacture_year_heading">Select Manufacture Year</string>
    <string name="manufacture_year_hint">Please enter vehicle number</string>
    <string name="medical_cond_heading">Medical Condition</string>
    <string name="medical_cond_hint">Please enter your medical condition</string>
    <string name="policy_heading">Current Policy Claim </string>
    <string name="enter_otp">Enter OTP</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="insurance">Insurance</string>
    <string name="mutual_fund">Mutual Fund</string>
    <string name="title_home">HOME</string>
    <string name="invest_money">INVEST YOUR MONEY</string>
    <string name="tracking_finance">TRACKING YOUR FINANCE</string>
    <string name="expense">EXPENSE</string>
    <string name="item">ITEM</string>
    <string name="amount">AMOUNT</string>
    <string name="income">INCOME</string>
    <string name="shopping">Shopping</string>
    <string name="movies">Movies</string>
    <string name="flipkart">Flipkart</string>
    <string name="food">Food</string>
    <string name="hotel">Hotel</string>
    <string name="sbi">SBI</string>
    <string name="axis">Axis Bank</string>
    <string name="hdfc">HDFC Bank</string>
    <string name="upi">UPI</string>
    <string name="wallet">Wallet</string>
    <string name="our_services">OUR SERVICES</string>
    <string name="financial_independence">Financial Independence with Us</string>
    <string name="algo_eq">We work in ALGO and EQ model</string>
    <string name="privacy_policy">Privacy Policy  |  Terms and Conditions</string>
    <string name="Title_welcome_screen">Welcome Screen</string>
    <string name="submit">SUBMIT</string>
    <string name="user_name">NAME</string>
    <string name="success">SUCCESS!!</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="success_message">Our Team will contact you in 24 hours to get the best deals</string>
    <string name="create_account_hint_enter_user_name">Enter Name</string>
    <string name="submit_login_otp">Submit</string>
    <string name="message_otp_recieved_">We have sent a verification code to your mobile number</string>
    <string name="verification_code_otp">Verification Code</string>
    <string name="otp">OTP</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="hey_welcome">Hey!! Welcome</string>
    <string name="tv_welcome_descriptiono">We deliver the best services at affordable prices</string>
    <string name="get_started">Get Started</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="skip">SKIP</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="education_title_blogs">BLOGS</string>
    <string name="education_title_webinar">WEBINARS</string>
    <string name="already_registered_message">You are already Registered\nThank You</string>
    <string name="dummy_text_blog">Stocks Going Up</string>
    <string name="dummy_date_blog">19 Feb 2022</string>
    <string name="dummy_title_webinar">Webinar 1</string>
    <string name="hosted_by">Hosted by :</string>
    <string name="self_hosted_dummy">Self-hosted</string>
    <string name="date">DATE</string>
    <string name="register_now_bt">Register Now</string>
    <string name="please_check_your_internet_connection">PLEASE CHECK YOUR INTERNET CONNECTION.</string>
    <string name="try_again">Try Again</string>
    <string name="learn">Learn</string>
    <string name="mutual_funds">Mutual Funds</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>