<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:backgroundTint="#212121">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/loan_form_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:text="@string/Name"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#C4C4C4"
            android:layout_marginTop="11dp"
            app:cardCornerRadius="7dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/enter_name"
                android:id="@+id/loan_form_name"
                app:backgroundTint="#C4C4C4"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:paddingLeft="11dp"
                android:paddingRight="11dp"/>

        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_heading"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#C4C4C4"
            android:layout_marginTop="11dp"
            app:cardCornerRadius="7dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/email_hint"
                android:paddingTop="7dp"
                app:backgroundTint="#C4C4C4"
                android:paddingBottom="7dp"
                android:id="@+id/loan_form_email"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:paddingLeft="11dp"
                android:paddingRight="11dp"/>

        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_heading"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#C4C4C4"
            android:layout_marginTop="11dp"
            app:cardCornerRadius="7dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/login_enter_phone_number"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:inputType="phone"
                app:backgroundTint="#C4C4C4"
                android:id="@+id/loan_form_phone"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:paddingLeft="11dp"
                android:paddingRight="11dp"/>

        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/business_heading"
            android:id="@+id/business_title"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#C4C4C4"
            android:id="@+id/business_card"
            android:layout_marginTop="11dp"
            app:cardCornerRadius="7dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/business_hint"
                app:backgroundTint="#C4C4C4"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:id="@+id/loan_form_business"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:paddingLeft="11dp"
                android:paddingRight="11dp"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#FFC400"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            android:layout_marginTop="20dp"
            android:id="@+id/loan_form_submit"
            app:cardCornerRadius="7dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/submit"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"/>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</androidx.cardview.widget.CardView>
