<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121">

    <TextView
        android:id="@+id/insurance_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#686868"
        android:gravity="center"
        android:text="Get 10% off on first purchase with us. Code - GYNX"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/insurance_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insurance_top"
        android:layout_marginTop="40dp"
        android:src="@drawable/insurance_img" />

    <TextView
        android:id="@+id/insurance_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insurance_img"
        android:layout_marginTop="10dp"
        android:text="@string/insurance_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/insurance_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insurance_title"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:gravity="center"
        android:text="@string/loan_body"
        android:textColor="#AAAAAA"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/insurance_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/insurance_categories"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <View
            android:layout_width="60dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:background="#858585" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/Select_category"
            android:textColor="#BABABA"
            android:textSize="14sp" />

        <View
            android:layout_width="60dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="24dp"
            android:background="#858585" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/insurance_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/bike_card"
            style="@style/neumorph_button_combinations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:src="@drawable/bike_card" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Motor"
                    android:textColor="#909090"
                    android:textSize="12sp" />
            </LinearLayout>
        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/car_card"
            style="@style/neumorph_button_combinations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:src="@drawable/car_card" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="#909090"
                    android:text="@string/Health"
                    android:textSize="12sp" />
            </LinearLayout>
        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/home_card"
            style="@style/neumorph_button_combinations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:src="@drawable/home_card" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/Life"
                    android:textColor="#909090"
                    android:textSize="12sp" />
            </LinearLayout>
        </soup.neumorphism.NeumorphCardView>
    </LinearLayout>

    <!--        <TextView-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginTop="34dp"-->
    <!--            android:layout_marginStart="20dp"-->
    <!--            android:text="@string/loan_list_title"-->
    <!--            android:textAllCaps="true"-->
    <!--            android:id="@+id/top_insurance_policies"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:textSize="13sp" />-->
</RelativeLayout>