<?xml version="1.0" encoding="utf-8"?><!--TODO() change all ui according to new ui-->
<!--TODO() add skip button functionality-->
<!--TODO() make skip button work the way resend needs to work-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_account_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5">

    <!-- Create an account TextView-->
    <LinearLayout
        android:id="@+id/create_account_canvas1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/canvas_background"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="horizontal">
            <!--             Back Button-->

            <!-- Complete your profile -->
            <View
                android:id="@+id/vector_create_account_back_arrow"
                android:layout_width="0dp"
                android:layout_height="16dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="0.1"
                android:background="@drawable/otp_arrow_back" />

            <TextView
                android:id="@+id/tv_create_account_complete_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="25dp"
                android:layout_weight="2"
                android:text="Complete Your Profile"
                android:textAppearance="@style/login_signup"
                android:textSize="21sp" />

            <Button
                android:id="@+id/bt_create_account_skip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_weight="0.6"
                android:background="@drawable/fragment_login_bt_submit_phone"
                android:text="SKIP"
                android:textColor="@color/button_canvas"
                android:textSize="15dp" />


        </LinearLayout>

        <!--contains heading and the edit text as a single layout-->
        <LinearLayout
            android:id="@+id/create_account_canvas2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--USER NAME -->
            <TextView
                android:id="@+id/tv_create_account_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="44dp"
                android:gravity="top"
                android:text="@string/user_name"
                android:textAppearance="@style/phone_number" />

            <EditText
                android:id="@+id/et_create_account_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/create_account_et"
                android:fontFamily="sans-serif"
                android:hint="@string/create_account_hint_enter_user_name"
                android:inputType="text"
                android:padding="14dp"
                android:textColorHint="@color/background_light_text"
                android:textSize="20sp" />

            <!-- Email Address -->
            <TextView
                android:id="@+id/tv_create_accounnt_email_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="76dp"
                android:gravity="top"
                android:text="@string/email_address"
                android:textAppearance="@style/phone_number" />
            <!--Email address edit text-->
            <EditText
                android:id="@+id/et_create_account_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/create_account_et"
                android:fontFamily="sans-serif"
                android:hint="@string/create_account_hint_enter_email_address"
                android:inputType="textEmailAddress"
                android:padding="14dp"
                android:textColorHint="@color/background_light_text"
                android:textSize="20sp" />
            <!-- SUBMIT OTP BUTTON-->
            <Button
                android:id="@+id/bt_create_account_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="43dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/fragment_login_bt_submit_phone"
                android:text="@string/submit_login_otp"
                android:textAppearance="@style/request_otp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="@color/button_canvas"
                app:layout_constraintBaseline_toBottomOf="@id/phone_card"
                app:layout_constraintTop_toBottomOf="@id/et_login_phone_number" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>